# bpftop

./: Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
bench/: plot.py  run.sh  shell.nix
bench/results/: bpftop_hyperfine_100.json  bpftop_hyperfine_1000.json  bpftop_hyperfine_10000.json  bpftop_hyperfine_2000.json  bpftop_hyperfine_500.json  bpftop_hyperfine_5000.json  bpftop_strace_100.txt  bpftop_strace_1000.txt  bpftop_strace_10000.txt  bpftop_strace_2000.txt  bpftop_strace_500.txt  bpftop_strace_5000.txt  bpftop_timing_100.json  bpftop_timing_1000.json  bpftop_timing_10000.json  bpftop_timing_2000.json  bpftop_timing_500.json  bpftop_timing_5000.json  comparison_100.json  comparison_1000.json  comparison_10000.json  comparison_2000.json  comparison_500.json  comparison_5000.json  htop_hyperfine_100.json  htop_hyperfine_1000.json  htop_hyperfine_10000.json  htop_hyperfine_2000.json  htop_hyperfine_500.json  htop_hyperfine_5000.json  htop_strace_100.txt  htop_strace_1000.txt  htop_strace_10000.txt  htop_strace_2000.txt  htop_strace_500.txt  htop_strace_5000.txt  meta_100.json  meta_1000.json  meta_10000.json  meta_2000.json  (+2 more)
bpftop/: Cargo.toml
bpftop-common/: Cargo.toml
bpftop-common/src/: lib.rs
bpftop-ebpf/: Cargo.toml
bpftop-ebpf/src/: files.rs  main.rs
bpftop/src/: app.rs  clipboard.rs  config.rs  input.rs  main.rs
bpftop/src/data/: cgroup_control.rs  collector.rs  container.rs  gpu.rs  mod.rs  process.rs  system.rs
bpftop/src/ebpf/: loader.rs
bpftop/src/theme/: gruvbox.rs  mod.rs  palette.rs
bpftop/src/ui/: dialogs.rs  filter_bar.rs  header.rs  layout.rs  mod.rs  process_table.rs  status_bar.rs  tree_view.rs
xtask/: Cargo.toml
xtask/src/: main.rs
