[workspace]
members = ["bpftop", "bpftop-common", "xtask"]
exclude = ["bpftop-ebpf"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
bpftop-common = { path = "bpftop-common" }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
bollard = "0.20"
nix = { version = "0.31", features = ["signal", "user"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
libc = "0.2"
serde_json = "1"
base64 = "0.22"
nvml-wrapper = "0.11"
