[package]
name = "bpftop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpftop"
path = "src/main.rs"

[dependencies]
bpftop-common = { path = "../bpftop-common" }
aya = "0.13"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bollard = "0.18"
nix = { version = "0.29", features = ["signal", "user"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
unicode-width = "0.2"
libc = "0.2"
