[package]
name = "bpftop"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpu"]
gpu = ["dep:nvml-wrapper"]

[[bin]]
name = "bpftop"
path = "src/main.rs"

[[bin]]
name = "diagnose"
path = "src/bin/diagnose.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
bpftop-common = { workspace = true }
aya = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
bollard = { workspace = true }
nix = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
unicode-width = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }
